# apertium-sme-fin

./: .gitattributes  .gitignore  Makefile  Makefile.am  NOTES  QUESTIONS  README  apertium-sme-fin.fin-sme.lex  apertium-sme-fin.fin-sme.lrx  apertium-sme-fin.fin-sme.metalrx  apertium-sme-fin.fin-sme.rlx  apertium-sme-fin.fin-sme.rtx  apertium-sme-fin.fin-sme.t1x  apertium-sme-fin.fin-sme.t2x  apertium-sme-fin.fin-sme.t3x  apertium-sme-fin.fin-sme.tlx  apertium-sme-fin.fin.lexc  apertium-sme-fin.fin.twol  apertium-sme-fin.sme-fin.dix  apertium-sme-fin.sme-fin.lrx  apertium-sme-fin.sme-fin.metalrx  apertium-sme-fin.sme-fin.rtx  apertium-sme-fin.sme-fin.t1x  apertium-sme-fin.sme-fin.t2x  apertium-sme-fin.sme-fin.t3x  apertium-sme-fin.sme-fin.t4x  apertium-sme-fin.sme.lexc  apertium-sme-fin.sme.twol  configure.ac  examples_from_fin_syntax.txt  finsmn  gt2apertium.cg3r  lexchoicebil.xsl  modes.xml  pending-tests.sh  regression-tests.sh  rm-deriv-cmp.twol  script.sh  tutorial-sme-fin.fin.dix  tutorial-sme-fin.sme-fin.dix  (+3 more)
corp/: line_phrases.sql  nordterm-fin.mdown  nordterm-sme.mdown  open_tran_-_fin_sme.txt  processed.txt  sampletext.txt  sentences  teakstta.txt  yle_uutiset_rss
corp/nt-fin-sme/: NOTES  book_fin.txt  book_sme.txt  fi__42.txt  fi_ch42.txt  html.tgz  sme_42.txt  sme__42.txt  sme_ch42.txt
corp/nt-fin-sme/bible.fin/: book001.chapter001.txt  book001.chapter002.txt  book001.chapter003.txt  book001.chapter004.txt  book001.chapter005.txt  book001.chapter006.txt  book001.chapter007.txt  book001.chapter008.txt  book001.chapter009.txt  book001.chapter010.txt  book001.chapter011.txt  book001.chapter012.txt  book001.chapter013.txt  book001.chapter014.txt  book001.chapter015.txt  book001.chapter016.txt  book001.chapter017.txt  book001.chapter018.txt  book001.chapter019.txt  book001.chapter020.txt  book001.chapter021.txt  book001.chapter022.txt  book001.chapter023.txt  book001.chapter024.txt  book001.chapter025.txt  book001.chapter026.txt  book001.chapter027.txt  book001.chapter028.txt  book001.chapter029.txt  book001.chapter030.txt  book001.chapter031.txt  book001.chapter032.txt  book001.chapter033.txt  book001.chapter034.txt  book001.chapter035.txt  book001.chapter036.txt  book001.chapter037.txt  book001.chapter038.txt  book001.chapter039.txt  book001.chapter040.txt  (+1123 more)
corp/nt-fin-sme/bible.sme/: book040.chapter001.txt  book040.chapter002.txt  book040.chapter003.txt  book040.chapter004.txt  book040.chapter005.txt  book040.chapter006.txt  book040.chapter007.txt  book040.chapter008.txt  book040.chapter009.txt  book040.chapter010.txt  book040.chapter011.txt  book040.chapter012.txt  book040.chapter013.txt  book040.chapter014.txt  book040.chapter015.txt  book040.chapter016.txt  book040.chapter017.txt  book040.chapter018.txt  book040.chapter019.txt  book040.chapter020.txt  book040.chapter021.txt  book040.chapter022.txt  book040.chapter023.txt  book040.chapter024.txt  book040.chapter025.txt  book040.chapter026.txt  book040.chapter027.txt  book040.chapter028.txt  book041.chapter001.txt  book041.chapter002.txt  book041.chapter003.txt  book041.chapter004.txt  book041.chapter005.txt  book041.chapter006.txt  book041.chapter007.txt  book041.chapter008.txt  book041.chapter009.txt  book041.chapter010.txt  book041.chapter011.txt  book041.chapter012.txt  (+219 more)
corp/nt-fin-sme/bible.sme/xml/: north_sami_new_testament.bible.xml  proc.py
dev/: MISSING  apertium-sme-fin.txt  bidix-sanity.sh  chapter002_notes  countries.txt  fin.cfg  generation-summary.bible.txt  generation-tag-fails-summary.txt  generation-test.sh  langs.cfg  langs.cfg.in  omorfi2apertium.relabel  postpos-candidates  sme_fin_postp_prep  update-lexc.py  update-lexc.sh  verbs_with_mwe_fin.dix  xfst2apertium.hashtags.twol  xfst2apertium.relabel  xfst2apertium.useless.generation.twol  xfst2apertium.useless.twol
dev/bidix/: A.lex.orig  Adv.lex.orig  Makefile  N.lex.orig  Po.lex.orig  Pron.lex.orig  V.lex.orig  calc-levenshtein.py
dev/oddasat/: TODO
dev/scripts/: apertium.py  coverage.py  debug.py
test/: fi-sm-input_old.txt  fin-sme-chunker-expected.txt  fin-sme-disam-expected.txt  fin-sme-generator-expected.txt  fin-sme-generator-gold.txt  fin-sme-input.rtx  fin-sme-input.txt  fin-sme-input.txt.rtx  fin-sme-interchunk3-expected.txt  fin-sme-lex-expected.txt  fin-sme-morph-expected.txt  fin-sme-pending-biltrans-expected.txt  fin-sme-pending-disam-expected.txt  fin-sme-pending-generator-expected.txt  fin-sme-pending-generator-gold.txt  fin-sme-pending-input.txt  fin-sme-pending-interchunk-expected.txt  fin-sme-pending-lex-expected.txt  fin-sme-pending-morph-expected.txt  fin-sme-pending-postchunk-expected.txt  fin-sme-pending-pretransfer-expected.txt  fin-sme-postchunk-expected.txt  fin-sme-pretransfer-expected.txt  fin-sme-regression-biltrans-expected.txt  fin-sme-regression-generator-expected.txt  fin-sme-regression-generator-gold.txt  fin-sme-regression-input.txt  fin-sme-regression-interchunk-expected.txt  fin-sme-regression-morph-expected.txt  fin-sme-regression-postchunk-expected.txt  fin-sme-regression-pretransfer-expected.txt  fin-sme-rtx-biltrans-expected.txt  fin-sme-rtx-disam-expected.txt  fin-sme-rtx-generator-expected.txt  fin-sme-rtx-lex-expected.txt  fin-sme-rtx-morph-expected.txt  fin-sme-rtx-pretransfer-expected.txt  fin-sme-rtx-transfer-expected.txt  sme-fin-regression-biltrans-expected.txt  sme-fin-regression-chunker-expected.txt  (+13 more)
texts/: gold.sme.txt  tarina.fin.txt
tools/: debug.py  lookup2cg
